--- a/.eslintrc
+++ b/.eslintrc
@@ -7,12 +7,10 @@
 
   "rules": {
     "no-console": 2,
-    "no-comma-dangle": 2,
     "no-control-regex": 2,
     "no-debugger": 2,
     "no-dupe-keys": 2,
     "no-empty": 2,
-    "no-empty-class": 2,
     "no-ex-assign": 2,
     "no-extra-boolean-cast": 2,
     "no-extra-parens": 2,
@@ -39,7 +37,6 @@
     "no-floating-decimal": 2,
     "no-implied-eval": 2,
     "no-iterator": 2,
-    "no-iterator": 2,
     "no-loop-func": 2,
     "no-multi-str": 2,
     "no-native-reassign": 2,
@@ -54,10 +51,8 @@
     "no-script-url": 2,
     "no-self-compare": 2,
     "no-sequences": 2,
-    "no-yoda": 2,
     "radix": 2,
     "wrap-iife": [2, "outside"],
-    "no-extra-strict": 2,
     "strict": 2,
     "no-catch-shadow": 2,
     "no-delete-var": 2,
@@ -80,14 +75,14 @@
     "no-array-constructor": 2,
     "no-new-object": 2,
     "no-spaced-func": 2,
-    "no-space-before-semi": 2,
     "quotes": [2, "single"],
-    "space-in-brackets": [2, "always"],
     "space-infix-ops": 2,
-    "space-return-throw-case": 2,
-    "space-unary-word-ops": 2,
     "max-nested-callbacks": [2, 3],
     "max-len": [2, 80, 4],
     "max-params": [2, 3]
+  },
+  "globals" : {
+    "TRACKER_CLIENT_DATA": true,
+    "_amTrackerEventQueue": true
   }
 }
