--- a/.jshintrc
+++ b/.jshintrc
@@ -19,6 +19,9 @@
   "esnext"   : true,
   "node"     : true,
   "globals"  : {
-    "window": true
+    "window": true,
+    "TRACKER_CLIENT_DATA": true,
+    "_amTrackerEventQueue": true,
+    "document": true
   }
 }
