--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "url": "https://github.com/voidabhi/Tracker/issues"
   },
   "homepage": "https://github.com/voidabhi/Tracker#readme",
-  "dev-dependencies": {
+  "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
     "gulp-jscs": "^3.0.2",
-    "gulp-jshint": "^2.0.0"
+    "gulp-jshint": "^2.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.5.3",
+    "jshint": "^2.9.2"
   }
 }
