--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Frontend js library for tracking events",
   "main": "tracker.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "eslint": "eslint src"
   },
   "repository": {
     "type": "git",
