--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "tracker.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "eslint": "eslint src"
+    "eslint": "eslint src",
+    "compress": "./node_modules/uglify src/index.js -o tracker.min.js"
   },
   "repository": {
     "type": "git",
